Starting category support

--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -21,8 +21,8 @@
 					<%= f.text_field :link %>
 				</li>
 				<li>
-					<%= f.label :category %>
-					<%= f.text_field :category %>
+					<%= f.label :tag_list %>
+					<%= f.text_field :tag_list %>
 				</li>
 
 				<%= f.submit %> | <%= link_to "Cancel", root_path %>
