--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -2,7 +2,7 @@
 	<p><%= link_to story.title, story.link %></p>
 	<small>Current Upvotes: <%= story.upvotes %></small>
 	|
-	<small>Category: <%= story.category %></small>
+	<small>Category: <%= story.categories %></small>
 	|
 	<small><%= link_to 'Comments', story %></small>
 	|
